--- a/views/booking/booking.handlebars
+++ b/views/booking/booking.handlebars
@@ -271,7 +271,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <a href="#" class="btn btn-danger" id="next-1">NEXT</a>
+                        <a href="#" class="btn btn-danger next" id="next-1">NEXT</a>
                     </div>
                 </div>
 
@@ -332,8 +332,8 @@
                     </div>
 
                     <div class="form-group">
-                        <a href="#" class="btn btn-danger" id="prev-2">BACK</a>
-                        <a href="#" class="btn btn-danger" id="next-2">NEXT</a>
+                        <a href="#" class="btn btn-danger prev" id="prev-2">BACK</a>
+                        <a href="#" class="btn btn-danger next rr" id="next-2">NEXT</a>
                     </div>
                 </div>
 
@@ -368,13 +368,13 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <h1 class="display-4 font-weight-bold">TOTAL: 000$</h1>
+                                <h1 class="display-4 font-weight-bold total">TOTAL: 000$</h1>
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <a href="#" class="btn btn-danger" id="prev-3">BACK</a>
+                        <a href="#" class="btn btn-danger prev" id="prev-3">BACK</a>
 <!--                        <a href="#" class="btn btn-success" id="submit">PROCCED TO PAYMENT</a>-->
                         <!-- id=submi => id=next3 -->
                          <input type="submit" name="submit" value="PROCCED TO PAYMENT" id="submit" class="btn btn-success">
@@ -388,12 +388,12 @@
         <div id="form-2" class="col-md-9">
             <form action="" method="POST">
                 <div class="form-row">
-                    <div class="form-group col-md-7">
+                    <div class="form-group col-md-6">
                         <label for="inputCardnumber">Card Number</label>
                         <input type="number" class="form-control" id="inputCardnumber" placeholder="">
                     </div>
 
-                    <div class="col-md-2 visa">
+                    <div class="col-md-3 visa">
                         <img src="/images/mastercard.svg" width="40" height="40">
                         <img src="/images/visa.svg" width="40" height="40">
                     </div>
