--- a/views/home/planos.handlebars
+++ b/views/home/planos.handlebars
@@ -1,14 +1,15 @@
 <div class="container-fluid p-0" id="plans">
     <img src="/images/Imagem 2.png" class="img-fluid banner" alt="Responsive image">
     <div class="row position-absolute logo1">
-        <div class="col-12">
-            <div class="row">
+<!--        <div class="col-12">-->
+<!--            <div class="row">-->
                 <h1>OUR WIFI PLANS</h1>
-            </div>
-        </div>
+<!--            </div>-->
+<!--        </div>-->
 
     </div>
 </div>
+
 
 <section id="beneficio"  class="container-fluid">
     <div class="row">
