--- a/views/home/servicos.handlebars
+++ b/views/home/servicos.handlebars
@@ -111,23 +111,8 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class=" devices">
-            <div class="device">
-<!--                <figure>-->
-                    <img src="/images/Camada%2044.png">
-<!--                </figure>-->
-                <div class="devicebox">
-                    <ul>
-                        <li>terrasystem</li>
-                        <li>terrasystem</li>
-                        <li>terrasystem</li>
-                        <li>terrasystem</li>
-                    </ul>
-                    <span><i class="fas fa-chevron-down"></i></span>
-                </div>
-            </div>
-
+    <div class="row mo">
+        <div class="col-md-3">
             <div class="device">
                 <!--                <figure>-->
                 <img src="/images/Camada%2044.png">
@@ -142,7 +127,9 @@
                     <span><i class="fas fa-chevron-down"></i></span>
                 </div>
             </div>
+        </div>
 
+        <div class="col-md-3">
             <div class="device">
                 <!--                <figure>-->
                 <img src="/images/Camada%2044.png">
@@ -157,7 +144,9 @@
                     <span><i class="fas fa-chevron-down"></i></span>
                 </div>
             </div>
+        </div>
 
+        <div class="col-md-3">
             <div class="device">
                 <!--                <figure>-->
                 <img src="/images/Camada%2044.png">
@@ -172,7 +161,9 @@
                     <span><i class="fas fa-chevron-down"></i></span>
                 </div>
             </div>
+        </div>
 
+        <div class="col-md-3">
             <div class="device">
                 <!--                <figure>-->
                 <img src="/images/Camada%2044.png">
