--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -1,11 +1,11 @@
 <div class="container-fluid p-0" id="faq">
     <img src="/images/Imagem 2.png" class="img-fluid banner" alt="Responsive image">
     <div class="row position-absolute logofaq">
-        <div class="col-12">
-            <div class="row">
+<!--        <div class="col-12">-->
+<!--            <div class="row">-->
                 <h1 class="h5 font-weight-bold ">FREQUENTLY ASKED QUESTIONS</h1>
-            </div>
-        </div>
+<!--            </div>-->
+<!--        </div>-->
     </div>
     <form>
         <input type="text" placeholder="Type your question..">
@@ -282,7 +282,7 @@
 
 <section id="acordiao" class="container-fluid">
 <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-8  faqs">
     <button class="accordion seccao">General 1 <i class="fa fa-plus" aria-hidden="true"></i></button>
     <div class="panel">
         <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
@@ -296,7 +296,7 @@
     </div>
 </div>
 <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-8 faqs">
     <button class="accordion seccao">General 2 <i class="fa fa-plus" aria-hidden="true"></i></button>
     <div class="panel">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
@@ -312,7 +312,7 @@
     </div>
 </div>
 <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col-8 faqs">
     <button class="accordion seccao">General 3 <i class="fa fa-plus" aria-hidden="true"></i></button>
     <div class="panel">
         <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
@@ -326,7 +326,7 @@
     </div>
 </div>
     <div class="row justify-content-center">
-        <div class="col-8">
+        <div class="col-8 faqs">
             <button class="accordion seccao">General 4 <i class="fa fa-plus" aria-hidden="true"></i></button>
             <div class="panel">
                 <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
@@ -340,7 +340,7 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-8">
+        <div class="col-8 faqs">
             <button class="accordion seccao">General 5 <i class="fa fa-plus" aria-hidden="true"></i></button>
             <div class="panel">
                 <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
@@ -354,7 +354,7 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-8">
+        <div class="col-8 faqs">
             <button class="accordion seccao">General 6 <i class="fa fa-plus" aria-hidden="true"></i></button>
             <div class="panel">
                 <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
@@ -368,7 +368,7 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-8">
+        <div class="col-8 faqs">
             <button class="accordion seccao">General 7 <i class="fa fa-plus" aria-hidden="true"></i></button>
             <div class="panel">
                 <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
