--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,9 +1,9 @@
-<footer class="container-fluid">
+<footer class="container-fluid text-center">
     <div class="row">
-        <div class="col-md">
+        <div class="col-md logofooter">
             <h1>LOGO</h1>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 menufooter">
             <div class="row">
                 <div class="col-md-2 fmenu">MENU</div>
                 <div class="col-md-10">
@@ -22,7 +22,7 @@
                 <div class="col-md-2 fcontato">CONTATOS</div>
                 <div class="col-md-10">
                     <ul>
-                        <li><a href="tel:002380000000"> (+238) 000 00 00</a></li>
+                        <li><a href="tel:002380000000">(+238) 000 00 00</a></li>
                         <li><a href="mailto:contact@wifianywhere.com">contact@wifianywhere.com</a></li>
                     </ul>
                 </div>
@@ -30,9 +30,9 @@
         </div>
         <div class="col-md">
             <div class="row rsocial">
-                <div class="col-md"><a href="#"><i class="fab fa-instagram"></i></a></div>
-                <div class="col-md"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
-                <div class="col-md"><a href="#"><i class="fab fa-twitter"></i></a></div>
+                <div class="col-md social"><a href="#"><i class="fab fa-instagram"></i></a></div>
+                <div class="col-md social"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+                <div class="col-md social"><a href="#"><i class="fab fa-twitter"></i></a></div>
             </div>
             <div class="row my-4">
                 <div class="col-md">
