--- a/public/css/style.css
+++ b/public/css/style.css
@@ -257,3 +257,13 @@
 #login hr.linha{
     text-align: center;
 }
+/*******************************************chat************************/
+#chat{
+    position: fixed;
+    right: 2%;
+    bottom: 2%;
+}
+
+/**************************************************************
+
+
