--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,10 +25,14 @@
 
 {{>_login}}
 
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
+{{>_chat}}
+
+    <script src="/bower_components/jquery/dist/jquery.js"></script><!--
+    <script src="/bower_components/popper.js/dist/popper.js"></script>-->
     <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/js/site.js"></script>
     <script src="/js/faq.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
 </body>
 </html>
