--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -1,1 +1,8 @@
-<h1>pagina de erro 404</h1>
+<section class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>404</h1>
+            <p>Pagina nao encontrada</p>
+        </div>
+    </div>
+</section>
