parametros faq and conecao faq/db

--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -18,7 +18,7 @@
         <div class="col-md">
             <div class="row text-center mt-4">
                 <div class="col-12">
-                    <a class="general" href="#">
+                    <a class="general" href="faq/1">
                         <img class="ativo" src="./images/General.svg">
                     </a>
 
