fix responsive mode 320-480 px

--- a/public/css/media.css
+++ b/public/css/media.css
@@ -214,6 +214,10 @@
         padding-top: 9%;
     }
 
+    footer .mrg {
+        margin: -0.8rem 0 1rem 0;
+    }
+
 
     footer .logofooter, footer .menufooter{
         display: none;
