--- a/public/css/main.css
+++ b/public/css/main.css
@@ -89,6 +89,10 @@ a:hover {
     /*margin-left: 1%;*/
 }
 
+footer .mrg {
+    margin: 1.5rem 0 0 0;
+}
+
 /********** fim dos estilos para rodape *********************
 =============================================================
 ************* inicio dos estilos para servicos **************/
