--- a/views/booking/booking.handlebars
+++ b/views/booking/booking.handlebars
@@ -361,7 +361,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="inputTerms">
+                                    <input class="form-check-input" type="checkbox" id="inputTerms" required>
                                     <label class="form-check-label" for="inputTerms">
                                         I agry to the <a class="linkTerms" href="#">terms and conditions</a>
                                     </label>
