--- a/views/home/planos.handlebars
+++ b/views/home/planos.handlebars
@@ -63,7 +63,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary site-cor">ONLINE BOOKING</a>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary site-cor">ONLINE BOOKING</a>
                 </div>
             </div>
         </div>
@@ -91,7 +91,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary site-cor">ONLINE BOOKING</a>
                 </div>
             </div>
         </div>
