--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -5,9 +5,10 @@
         <div class="col-12">
             <div class="row">
                 <h1>LOGO</h1>
+                {{!-- <img src="/images/logo.png" width="350" height="300"> --}}
             </div>
             <div class="row">
-                <a href="#" class="btn btn-info btn-lg">ONLINE BOOKING</a>
+                <a href="#" class="btn btn-info btn-lg">{{translation.ONLINE_BOOKING}} </a>
             </div>
         </div>
 
@@ -17,7 +18,7 @@
 <section id="beneficio"  class="container-fluid">
     <div class="row">
         <div class="col-12 text-center mt-4">
-            <h1 class="display-4 font-weight-bold">BENEFITS</h1>
+            <h1 class="display-4 font-weight-bold">{{translation.BENEFICIOS}} </h1>
         </div>
     </div>
     <div class="row">
@@ -60,7 +61,7 @@
 <div class="col align-self-center">
      <div class="row">
          <div class="col-12 text-center mt-4">
-             <h1 class="display-3 font-weight-bold">HOW IT WORKS</h1>
+             <h1 class="display-3 font-weight-bold">{{translation.HIW}} </h1>
          </div>
      </div>
 
@@ -70,7 +71,7 @@
                  <div class="col-12"><img src="./images/Book Online.svg"></div>
              </div>
              <div class="row">
-                 <div class="col-12 mt-4"><h5 class="text-center" >Book Online</h5></div>
+                 <div class="col-12 mt-4"><h5 class="text-center" >{{translation.RESERVA_ONLINE}} </h5></div>
              </div>
          </div>
          <div class="col-md">
@@ -78,7 +79,7 @@
                  <div class="col-12"><img src="./images/Receive Package.svg"></div>
              </div>
              <div class="row">
-                 <div class="col-12 mt-4"><h5 class="text-center">Receive your Package</h5></div>
+                 <div class="col-12 mt-4"><h5 class="text-center">{{translation.RYP}}</h5></div>
              </div>
          </div>
          <div class="col-md">
@@ -86,7 +87,7 @@
                  <div class="col-12"><img src="./images/Enjoy Internet Anywhere.svg"></div>
              </div>
              <div class="row">
-                 <div class="col-12 mt-4"><h5 class="text-center">Enjoy Internet Anywhere</h5></div>
+                 <div class="col-12 mt-4"><h5 class="text-center">{{translation.EIA}}</h5></div>
              </div>
          </div>
          <div class="col-md">
@@ -94,7 +95,7 @@
                  <div class="col-12"><img src="./images/Return the Wifi Device.svg"></div>
              </div>
              <div class="row">
-                 <div class="col-12 mt-4"><h5 class="text-center">Return the Wifi Device</h5></div>
+                 <div class="col-12 mt-4"><h5 class="text-center">{{translation.RWD}}</h5></div>
              </div>
          </div>
      </div>
@@ -104,13 +105,13 @@
 <section id="offers" class="container-fluid">
     <div class="row text-center">
         <div class="col-md-12">
-            <h1 class="display-3 font-weight-bold">TOP OFFERS</h1>
+            <h1 class="display-3 font-weight-bold">{{translation.TO}}</h1>
         </div>
     </div>
     <div class="row">
         <div class="col d-flex justify-content-center coluna">
             <div class="pacote text-center">
-                <h5 class="card-header planocabeca">PLAN NAME</h5>
+                <h5 class="card-header planocabeca">{{translation.PN}} </h5>
                 <div class="card-body">
                     <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
@@ -118,13 +119,13 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
         <div class="col d-flex justify-content-center coluna">
             <div class="pacote text-center">
-                <h5 class="card-header planocabeca">PLAN NAME</h5>
+                <h5 class="card-header planocabeca">{{translation.PN}}</h5>
                 <div class="card-body">
                     <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
@@ -132,13 +133,13 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
         <div class="col d-flex justify-content-center coluna">
             <div class="pacote text-center">
-                <h5 class="card-header planocabeca">PLAN NAME</h5>
+                <h5 class="card-header planocabeca">{{translation.PN}}</h5>
                 <div class="card-body">
                     <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
                     <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
@@ -146,7 +147,7 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
                 </div>
             </div>
         </div>
