--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -15,7 +15,7 @@
             <a class="nav-link"  href="./planos">PLANS</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link"   href="./faq/1">FAQ</a>
+            <a class="nav-link"   href="./faq">FAQ</a>
         </li>
         <li class="nav-item">
             <a class="login nav-link"   data-toggle="modal" data-target="#login"><i class="far fa-user"></i> LOGIN</a>
